--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,7 +10,7 @@
     "DB":"Data Source=DESKTOP-CQVULK8;Initial Catalog=DiplomaChallengeSem1;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Auth0": {
-    "Domain": "https://dev-tt6-hw09.us.auth0.com",
+    "Domain": "https://dev-tt6-hw09.us.auth0.com/",
     "Audience": "https://diploma-challenge-sem-1.com.au"
   }
 }
