--- a/fe-diploma-challenge/package.json
+++ b/fe-diploma-challenge/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fe-diploma-challenge",
+  "homepage": "https://fix.azurewebsites.net",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
