updated yaml configurations

--- a/fe-diploma-challenge/package.json
+++ b/fe-diploma-challenge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fe-diploma-challenge",
-  "homepage": "https://fix.azurewebsites.net",
+  "homepage": "https://challenge-app-one.azurewebsites.net",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
