--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,9 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DB":"Server=tcp:challenge-instance-one.database.windows.net,1433;Initial Catalog=challenge;Persist Security Info=False;User ID=challengeAdmin;Password=challengePrediction_1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
+  "DB":"Server=tcp:challenge-instance-one.database.windows.net,1433;Initial Catalog=challenge;Persist Security Info=False;User ID=challengeAdmin;Password=challengePrediction_1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   "Auth0": {
     "Domain": "https://dev-tt6-hw09.us.auth0.com/",
     "Audience": "https://diploma-challenge-sem-1.com.au"
