--- a/FE/angular.json
+++ b/FE/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0ab18603-999d-42aa-bf1a-7a86ab97f97c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
