--- a/.github/workflows/challenge-api.yml
+++ b/.github/workflows/challenge-api.yml
@@ -6,6 +6,7 @@ on:
       - 'API/**'
     branches:
       - deploy
+      - pass
   workflow_dispatch:
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
