--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "DB":"Deployed sql db here"
+  "DB":"Server=tcp:challenge-instance-one.database.windows.net,1433;Initial Catalog=challenge;Persist Security Info=False;User ID=challengeAdmin;Password=challengePrediction_1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
