--- a/FE/package.json
+++ b/FE/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fe",
+  "homepage": "https://challenge-app-one.azurewebsites.net",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
