--- a/.github/workflows/challenge-fe.yml
+++ b/.github/workflows/challenge-fe.yml
@@ -21,7 +21,7 @@ jobs:
   build:
     defaults:
         run:
-          working-directory: ./fe-diploma-challenge
+          working-directory: ./FE
     runs-on: windows-latest
 
     steps:
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./fe-diploma-challenge/dist/fe-diploma-challenge
+          path: ./FE/dist/FE
 
   deploy:
     runs-on: ubuntu-latest
